# softmesh

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.gitea/workflows/: build.yaml  deploy.yaml
tools/: echo_loopback.py  room_loopback.py
