[project]
name = "softmesh-workspace"
version = "0.0.0"
description = "Softmesh microservices monorepo"
requires-python = ">=3.12"

[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
softmesh-stack = { workspace = true }
mesh-gateway = { workspace = true }
home-auto-client = { workspace = true }
room-server = { workspace = true }
observer = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "TID", "RUF"]
ignore = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["packages/*/tests", "tests"]
pythonpath = [
    "packages/softmesh-stack/src",
    "packages/mesh-gateway/src",
    "packages/home-auto-client/src",
    "packages/room-server/src",
    "packages/observer/src",
]
